# cpp-template

./: .gitignore  CMakeLists.txt  README.md
Core/: CMakeLists.txt  Core
Core/include/: app.hpp  core.hpp  entry.hpp
Core/src/: app.cpp
MyApp/: CMakeLists.txt  main.cpp
